--- a/includes/main.tex
+++ b/includes/main.tex
@@ -279,13 +279,13 @@
 % \listoftables
 
 \begin{abstract}
-  自旋输运这一新兴领域揭示了量子顺磁体引人注目的潜力，尽管它们缺乏长程磁有序，但却具备展现新奇现象的能力，并为先进技术应用开辟了道路。本论文深入探讨了量子顺磁体框架下的能斯特型热自旋输运，重点研究了自旋-轨道耦合与系统基态之间的相互作用，尽管该系统基态是顺磁性的，但可以通过上支部分的激发传递自旋信息。
+  自旋输运这一新兴领域揭示了量子顺磁体引人注目的潜力，尽管它们缺乏长程磁有序，但却具备展现新奇现象的能力，并为先进技术应用开辟了道路。本论文深入探讨了量子顺磁体框架下的能斯特型热自旋输运，重点研究了自旋-轨道耦合与系统基态之间的相互作用，尽管该系统基态是顺磁性的，但可以通过上支激发传递自旋信息。
 
-  利用晶体场（CEF）激发，我们将上支部分描述为具有不同味的玻色子准粒子，在线性味波理论框架下进行处理。这种方法使我们能够引入味能斯特效应（FNE）的概念，有别于在有序系统中观察到的磁子能斯特效应，这是一种拓扑自旋输运现象。
+  利用晶体电场（CEF）激发，我们将上支部分描述为具有不同味的玻色子准粒子，在线性味波理论框架下进行处理。这种方法使我们能够引入味能斯特效应（FNE）的概念，有别于在有序系统中观察到的磁声子能斯特效应，这是一种拓扑自旋输运现象。
 
-  利用包含 Dzyaloshinskii-Moriya（DM）相互作用和显著硬轴各向异性的有效 spin-1 哈密顿量，我们通过线性响应理论计算味能斯特系数，以研究具有全进全出的伊辛轴配置的二维 pyrochlore 薄膜为例，进行具体分析。我们阐明了该薄膜中的 FNE 及其随温度、各向异性、DM 相互作用和外部磁场的变化情况。
+  利用包含Dzyaloshinskii-Moriya（DM）相互作用和显著硬轴各向异性的有效 spin-1 哈密顿量，我们通过线性响应理论计算味能斯特系数。我们以研究具有全进全出的伊辛轴配置的二维pyrochlore薄膜为例，进行具体分析。我们阐明了该薄膜中的 FNE 及其对温度、各向异性、DM 相互作用和外部磁场的敏感性。
 
-  论文的结果强调了 FNE 与 CEF 激发的贝里曲率之间的内在联系，这一关系为热自旋电流的调控和量子顺磁体中拓扑自旋输运的探索提供了可能的应用前景。我们的结果不仅有助于对量子顺磁体理论的深入理解，而且为未来实验研究奠定了基础，为这些效应在自旋电子学领域的实际应用提供了理论依据。
+  论文的结果强调了FNE与CEF激发的贝里曲率之间的内在联系，这一关系为热自旋电流的调控和量子顺磁体中拓扑自旋输运的探索提供了可能的应用前景。我们的结果不仅有助于对量子顺磁体理论的深入理解，而且为未来实验研究奠定了基础，为这些效应在自旋电子学领域的实际应用打下了提供了理论依据。
 \end{abstract}
 
 \begin{abstract*}
